--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -17,7 +17,6 @@ newlines.topLevelStatementBlankLines = [
 ]
 newlines.avoidInResultType = true
 
-danglingParentheses.callSite = false # think about it
+danglingParentheses.callSite = false
 
-rewrite.rules = [AvoidInfix, Imports, SortModifiers]
-rewrite.imports.sort = ascii
+rewrite.rules = [SortModifiers]
