--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -8,6 +8,7 @@ indent.defnSite = 2
 indent.extendSite = 2
 
 newlines.avoidInResultType = true
+newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
 newlines.topLevelStatementBlankLines = [
   {
     maxNest = 0
