--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,6 +3,9 @@ runner.dialect = scala211
 
 maxColumn = 100
 
+docstrings.removeEmpty = true
+docstrings.wrapMaxColumn = 80
+
 indent.caseSite = 2
 indent.defnSite = 2
 indent.extendSite = 2
